Reemplazar GetFirst por Get(0)